--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <!-- Main section Starts -->
             <main>
-                <img class="mainpage" src="/landing-section-image.png" alt="">
+                <img class="mainpage" src="landing-section-image.png" alt="">
                 <h1>Stunning <br> Workspace <p>.</p></h1>
                 <br>
                 <h5>With Stunning,remote teams can organize projects,<br> manage shifting pirorites, and get work done.</h5>
