--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <!-- TopBar Starts -->
     <nav>
-        <img src="/stunning-logo.png" alt="">
+        <img src="stunning-logo.png" alt="">
                 <a href="#">Home</a>
                 <a href="#">About</a>
                 <a href="#">Blog</a>
@@ -32,36 +32,36 @@
                 <br>
                 <div class="box">
                     <div>
-                        <img id="tick1" src="/tick-gray.png" alt="">
+                        <img id="tick1" src="tick-gray.png" alt="">
                         <p id="text">Damm design</p>
-                        <img src="/user-pink.png" alt="">
+                        <img src="user-pink.png" alt="">
                         <p>15 Oct</p>
                         <button class="btn" id="btn1"></button>
                     </div>
                 </div>
                 <div class="box">
                     <div>
-                        <img id="tick2" src="/tick-gray.png" alt="">
+                        <img id="tick2" src="tick-gray.png" alt="">
                         <p id="text">Blur Animation</p>
-                        <img src="/user-orange.png" alt="">
+                        <img src="user-orange.png" alt="">
                         <p>15 Oct</p>
                         <button class="btn" id="btn2"></button>
                     </div>
                 </div>
                 <div class="box">
                     <div>
-                        <img id="tick3" src="/tick-gray.png" alt="">
+                        <img id="tick3" src="tick-gray.png" alt="">
                         <p id="text">Illsturation</p>
-                        <img src="/user-blue.png" alt="">
+                        <img src="user-blue.png" alt="">
                         <p>15 Oct</p>
                         <button class="btn" id="btn3"></button>
                     </div>
                 </div>
                 <div class="box">
                     <div>
-                        <img id="tick4" src="/tick-gray.png" alt="">
+                        <img id="tick4" src="tick-gray.png" alt="">
                         <p id="text">Refunds</p>
-                        <img src="/user-red.png" alt="">
+                        <img src="user-red.png" alt="">
                         <p>15 Oct</p>
                         <button class="btn" id="btn4"></button>
                     </div>
