--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <br>
                 <h5>With Stunning,remote teams can organize projects,<br> manage shifting pirorites, and get work done.</h5>
                 <br>
-                <button class="btn" style="background-color: #5243c0;color: white;border-radius: 15px;font-size: 12px;width: 125px;font-weight: bold;height: 50px;">New Account</button><span class="arrow"><img src="/arrow-up.png" alt=""><img src="/arrow-down.png" alt=""></span>
+                <button class="btn" style="background-color: #5243c0;color: white;border-radius: 15px;font-size: 12px;width: 125px;font-weight: bold;height: 50px;">New Account</button><span class="arrow"><img src="arrow-up.png" alt=""><img src="arrow-down.png" alt=""></span>
                 <br>
                 <div class="box">
                     <div>
